--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -392,30 +392,30 @@
 
                 <!-- Feature Buttons -->
                 <div class="grid grid-cols-3 gap-4 mb-8">
-                    <div class="feature-btn" style="background-color: #16a34a;">
+                    <a href="#" class="feature-btn" style="background-color: #16a34a;">
                         <i class="fas fa-coins text-white text-xl mb-1"></i>
                         <span class="text-white text-center">MVZx<br>Buy & Earn</span>
-                    </div>
-                    <div class="feature-btn" style="background-color: #db2777;">
+                    </a>
+                    <a href="#" class="feature-btn" style="background-color: #db2777;">
                         <i class="fas fa-gift text-white text-xl mb-1"></i>
                         <span class="text-white text-center">Airdrop</span>
-                    </div>
-                    <div class="feature-btn" style="background-color: #ca8a04;">
+                    </a>
+                    <a href="#" class="feature-btn" style="background-color: #ca8a04;">
                         <i class="fas fa-microchip text-white text-xl mb-1"></i>
                         <span class="text-white text-center">Mining</span>
-                    </div>
-                    <div class="feature-btn" style="background-color: #2563eb;">
+                    </a>
+                    <a href="#" class="feature-btn" style="background-color: #2563eb;">
                         <i class="fas fa-building text-white text-xl mb-1"></i>
                         <span class="text-white text-center">Direct<br>Deposit</span>
-                    </div>
-                    <div class="feature-btn" style="background-color: #4338ca;">
+                    </a>
+                    <a href="#" class="feature-btn" style="background-color: #4338ca;">
                         <i class="fas fa-handshake text-white text-xl mb-1"></i>
                         <span class="text-white text-center">Escrow<br>P2P Trade</span>
-                    </div>
-                    <div class="feature-btn" style="background-color: #15803d;">
+                    </a>
+                    <a href="#" class="feature-btn" style="background-color: #15803d;">
                         <i class="fas fa-vote-yea text-white text-xl mb-1"></i>
                         <span class="text-white text-center">Voting</span>
-                    </div>
+                    </a>
                 </div>
 
                 <!-- Call to Action -->
@@ -495,7 +495,7 @@
 
     <script>
         // API Base URL - Replace with your Render backend URL
-        const API_BASE_URL = 'https://your-render-app.onrender.com';
+        const API_BASE_URL = 'https://mavizweb.onrender.com';
         
         // Global state
         let authState = {
